--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,8 @@ jobs:
         DOCKER_USERNAME: ${{secret.DOCKER_USERNAME}}
         DOCKER_PASSWORD: ${{sevret.DOCKER_PASSWORD}}
       run: docker login -u DOCKER_USERNAME -p DOCKER_PASSWORD
-    -name: Build the Docker image
-      run: docker build -t worldAlert . 
-    -name: Push to Docker hub
-      run: docker push haileythegooner/worldAlert:latest
+
+    - name: Build the Docker image
+      run: docker build -t world-whalealert . 
+    - name: Push to Docker hub
+      run: docker push haileythegooner/world-whalealert:latest
