--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Login Dockerhub
       env:
-        DOCKER_USERNAME: ${{secret.DOCKER_USERNAME}}
-        DOCKER_PASSWORD: ${{sevret.DOCKER_PASSWORD}}
+        DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
+        DOCKER_PASSWORD: ${{sevrets.DOCKER_PASSWORD}}
       run: docker login -u DOCKER_USERNAME -p DOCKER_PASSWORD
 
     - name: Build the Docker image
