--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,8 @@ jobs:
       run: docker login -u haileythegooner -p $DOCKER_PASSWORD
 
     - name: Build the Docker image
-      run: docker build -t world-whalealert . 
+      run: docker build -t world-whalealert v1. 
     - name: tag the Docker image
-      run: docker tag v-1 haileythegooner/world-whalealert
+      run: docker tag haileythegooner/world-whalealert:v1 haileythegooner/world-whalealert:latest
     - name: Push to Docker hub
       run: docker push haileythegooner/world-whalealert:latest
