fixed CD pipeline

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,8 +2,10 @@ name: CD Pipeline
 
 on:
   workflow_run: 
-  worlflows: ["CI Pipeline"]
-  types: - completed
+    workflows: ["CI Pipeline"]
+    types: 
+     - completed
+
  
 
 jobs:
@@ -15,9 +17,9 @@ jobs:
     steps:
    
     - name: Pull Docker image
-	  run: sudo docker pull haileythegooner/world-whalealert:latest
-	- name: Delete Old Docker container
-	  run: sudo docker rm -f world-whalealert-container || true
-	-name: Run Docker Container
-	  run: sudo docker run -d -p 8080:8080 --name world-whalealert-container haileythegooner/world-whalealert
+      run: sudo docker pull haileythegooner/world-whalealert:latest
+    - name: Delete Old Docker container
+      run: sudo docker rm -f world-whalealert-container || true
+    - name: Run Docker Container
+      run: sudo docker run -d -p 8080:8080 --name world-whalealert-container haileythegooner/world-whalealert
       
