--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,8 +6,6 @@ on:
     types: 
      - completed
 
- 
-
 jobs:
 
   build:
@@ -15,10 +13,9 @@ jobs:
     runs-on: self-hosted
 
     steps:
-   
     - name: Pull Docker image
       run: sudo docker pull haileythegooner/world-whalealert:latest
-    - name: Delete Old Docker container
+    - name: Delete old Docker container
       run: sudo docker rm -f world-whalealert-container || true
     - name: Run Docker Container
       run: sudo docker run -d -p 8080:8080 --name world-whalealert-container haileythegooner/world-whalealert
