--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,35 @@ jobs:
       env:
         DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+        discordURL: ${{secrets.DISCORD_URL}}
+
+        wsETHUrl: ${{secrets.WSETHURL}}
+        WLDAPI: ${{secrets.WLDAPI}}
+
+        APP_KEY: ${{secrets.APP_KEY}}
+        APP_SECRET: ${{secrets.APP_SECRET}}
+        BEARER_TOKEN: ${{secrets.BEARER_TOKEN}}
+        ACCESS_TOKEN: ${{secrets.ACCESS_TOKEN}}
+        ACCESS_SECRET: ${{secrets.ACCESS_SECRET}}
+        CLIENT_ID: ${{secrets.CLIENT_ID}} 
+        CLIENT_SECRET: ${{secrets.CLIENT_SECRET}}
+
+
+        TELEGRAM_TOKEN: ${{secrets.TELEGRAM_TOKEN}}
+        NGROK_SEVER_URL: ${{secrets.NGROK_SEVER_URL}}
+
+        DISCORD_APP_ID: ${{secrets.DISCORD_APP_ID}}
+        DISCORD_PUBLIC_KEY: ${{secrets.DISCORD_PUBLIC_KEY}}
+        DISCORD_URL: ${{secrets.DISCORD_URL}}
+
+        DISCORD_TOKEN: ${{secrets.DISCORD_TOKEN}}
+        DISCORD_SERVERID: ${{secrets.DISCORD_SERVERID}}
+
+
+
+        PORT: ${{secrets.PORT}}
+        ngrokauth: ${{secrets.NGROKAUTH}}
+
       run: docker login -u haileythegooner -p $DOCKER_PASSWORD
 
     - name: Build the Docker image
