--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,9 +19,17 @@ jobs:
       run: sudo docker rm -f world-whalealert-container || true 
     - name: Generate Environment Variable File for production  
       run: | 
-        steps:
-          echo "DISCORD_URL=$DISCORD_URL" >> .env.production
+        
           echo "APP_KEY=$APP_KEY" >> .env.production
+          echo "APP_SECRET=$APP_SECRET" >> .env.production
+          echo "WSETHURL=$WSETHURL" >> .env.production
+          echo "ACCESS_TOKEN=$ACCESS_TOKEN" >> .env.production
+          echo "ACCESS_SECRET=$ACCESS_SECRET" >> .env.production
+          echo "BEARER_TOKEN=$BEARER_TOKEN" >> .env.production
+          echo "DISCORD_URL=$DISCORD_URL" >> .env.production
+          echo "DISCORD_TOKEN=$DISCORD_TOKEN" >> .env.production
+          echo "TELEGRAM_TOKEN=$TELEGRAM_TOKEN" >> .env.production
+          echo "NGROK_SEVER_URL=$NGROK_SEVER_URL" >> .env.production
           env:
             DISCORD_URL: ${{secrets.DISCORD_URL}}
             WSETHURL: ${{secrets.WSETHURL}}
