--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,21 +19,33 @@ jobs:
       run: sudo docker rm -f world-whalealert-container || true 
     - name: Generate Environment Variable File for production  
       run: |
-        echo "APP_KEY=$APP_KEY" >> .env.production
-        echo "APP_SECRET=$APP_SECRET" >> .env.production
-        echo "WSETHURL=$WSETHURL" >> .env.production
-        echo "ACCESS_TOKEN=$ACCESS_TOKEN" >> .env.production
-        echo "ACCESS_SECRET=$ACCESS_SECRET" >> .env.production
-        echo "BEARER_TOKEN=$BEARER_TOKEN" >> .env.production
+        echo "DISCORD_WEBHOOK_URL" >> .env.production
+        echo "DISCORD_APP_ID" >> .env.production
+        echo "DISCORD_PUBLIC_KEY" >> .env.production
         echo "DISCORD_URL=$DISCORD_URL" >> .env.production
         echo "DISCORD_TOKEN=$DISCORD_TOKEN" >> .env.production
+
+        echo "WSETHURL=$WSETHURL" >> .env.production
+
+        echo "APP_KEY=$APP_KEY" >> .env.production
+        echo "APP_SECRET=$APP_SECRET" >> .env.production
+        echo "BEARER_TOKEN=$BEARER_TOKEN" >> .env.production
+        echo "ACCESS_TOKEN=$ACCESS_TOKEN" >> .env.production
+        echo "ACCESS_SECRET=$ACCESS_SECRET" >> .env.production
+        echo "CLIENT_ID"  >> .env.production 
+        echo "CLIENT_SECRET"  >> .env.production
+        
         echo "TELEGRAM_TOKEN=$TELEGRAM_TOKEN" >> .env.production
         echo "NGROK_SEVER_URL=$NGROK_SEVER_URL" >> .env.production
       env:
         DISCORD_WEBHOOK_URL: ${{secrets.DISCORD_WEBHOOK_URL}}
+        DISCORD_APP_ID: ${{secrets.DISCORD_APP_ID}}
+        DISCORD_PUBLIC_KEY: ${{secrets.DISCORD_PUBLIC_KEY}}
         DISCORD_URL: ${{secrets.DISCORD_URL}}
+        DISCORD_TOKEN: ${{secrets.DISCORD_TOKEN}}
+
         WSETHURL: ${{secrets.WSETHURL}}
-        WLDAPI: ${{secrets.WLDAPI}}
+      
         APP_KEY: ${{secrets.APP_KEY}}
         APP_SECRET: ${{secrets.APP_SECRET}}
         BEARER_TOKEN: ${{secrets.BEARER_TOKEN}}
@@ -41,19 +53,23 @@ jobs:
         ACCESS_SECRET: ${{secrets.ACCESS_SECRET}}
         CLIENT_ID: ${{secrets.CLIENT_ID}} 
         CLIENT_SECRET: ${{secrets.CLIENT_SECRET}}
+
         TELEGRAM_TOKEN: ${{secrets.TELEGRAM_TOKEN}}
+
         NGROK_SEVER_URL: ${{secrets.NGROK_SEVER_URL}}
-        DISCORD_APP_ID: ${{secrets.DISCORD_APP_ID}}
-        DISCORD_PUBLIC_KEY: ${{secrets.DISCORD_PUBLIC_KEY}}
-        DISCORD_TOKEN: ${{secrets.DISCORD_TOKEN}}
-        DISCORD_SERVERID: ${{secrets.DISCORD_SERVERID}}
-        PORT: ${{secrets.PORT}}
-        ngrokauth: ${{secrets.NGROKAUTH}}
+       
+      
+
     - name: Run Docker Container
       env:
         DISCORD_WEBHOOK_URL: ${{secrets.DISCORD_WEBHOOK_URL}}
+        DISCORD_APP_ID: ${{secrets.DISCORD_APP_ID}}
+        DISCORD_PUBLIC_KEY: ${{secrets.DISCORD_PUBLIC_KEY}}
+        DISCORD_URL: ${{secrets.DISCORD_URL}}
+        DISCORD_TOKEN: ${{secrets.DISCORD_TOKEN}}
+        
         wsETHUrl: ${{secrets.WSETHURL}}
-        WLDAPI: ${{secrets.WLDAPI}}
+    
         APP_KEY: ${{secrets.APP_KEY}}
         APP_SECRET: ${{secrets.APP_SECRET}}
         BEARER_TOKEN: ${{secrets.BEARER_TOKEN}}
@@ -61,19 +77,11 @@ jobs:
         ACCESS_SECRET: ${{secrets.ACCESS_SECRET}}
         CLIENT_ID: ${{secrets.CLIENT_ID}} 
         CLIENT_SECRET: ${{secrets.CLIENT_SECRET}}
+
         TELEGRAM_TOKEN: ${{secrets.TELEGRAM_TOKEN}}
+
         NGROK_SEVER_URL: ${{secrets.NGROK_SEVER_URL}}
 
-        DISCORD_APP_ID: ${{secrets.DISCORD_APP_ID}}
-        DISCORD_PUBLIC_KEY: ${{secrets.DISCORD_PUBLIC_KEY}}
-        DISCORD_URL: ${{secrets.DISCORD_URL}}
-
-        DISCORD_TOKEN: ${{secrets.DISCORD_TOKEN}}
-        DISCORD_SERVERID: ${{secrets.DISCORD_SERVERID}}
-
-
-
-        PORT: ${{secrets.PORT}}
-        ngrokauth: ${{secrets.NGROKAUTH}}
+  
       run: sudo docker run -d -p 8080:8080 --name world-whalealert-container haileythegooner/world-whalealert
       
