--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,12 +19,12 @@ jobs:
       run: sudo docker rm -f world-whalealert-container || true 
     - name: Generate Environment Variable File for production  
       run: |
-        echo "DISCORD_WEBHOOK_URL" >> .env.production
-        echo "DISCORD_APP_ID" >> .env.production
-        echo "DISCORD_PUBLIC_KEY" >> .env.production
+        echo "DISCORD_WEBHOOK_URL=$DISCORD_WEBHOOK_URL" >> .env.production
+        echo "DISCORD_APP_ID=$DISCORD_APP_ID" >> .env.production
+        echo "DISCORD_PUBLIC_KEY=$DISCORD_PUBLIC_KEY" >> .env.production
         echo "DISCORD_URL=$DISCORD_URL" >> .env.production
         echo "DISCORD_TOKEN=$DISCORD_TOKEN" >> .env.production
-        echo "DISCORD_CHANNELID" >> .env.production
+        echo "DISCORD_CHANNELID=$DISCORD_CHANNELID" >> .env.production
 
         echo "WSETHURL=$WSETHURL" >> .env.production
 
@@ -33,8 +33,8 @@ jobs:
         echo "BEARER_TOKEN=$BEARER_TOKEN" >> .env.production
         echo "ACCESS_TOKEN=$ACCESS_TOKEN" >> .env.production
         echo "ACCESS_SECRET=$ACCESS_SECRET" >> .env.production
-        echo "CLIENT_ID"  >> .env.production 
-        echo "CLIENT_SECRET"  >> .env.production
+        echo "CLIENT_ID=$CLIENT_ID"  >> .env.production 
+        echo "CLIENT_SECRET=$CLIENT_SECRET"  >> .env.production
         
         echo "TELEGRAM_TOKEN=$TELEGRAM_TOKEN" >> .env.production
         echo "NGROK_SEVER_URL=$NGROK_SEVER_URL" >> .env.production
@@ -86,5 +86,6 @@ jobs:
         NGROK_SEVER_URL: ${{secrets.NGROK_SEVER_URL}}
 
   
-      run: sudo docker run -d -p 8080:8080 --name world-whalealert-container haileythegooner/world-whalealert
+      run: sudo docker run --env-file ./env.production -d -p 8080:8080 --name world-whalealert-container haileythegooner/world-whalealert
+     
       
