--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "app-root-path": "^3.1.0",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
+    "ccxt": "^4.2.58",
     "discord.js": "^14.11.0",
     "dotenv": "^16.3.1",
     "ethers": "^5.7.2",
