--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "app-root-path": "^3.1.0",
-    "axios": "^1.4.0",
+    "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "ccxt": "^4.2.58",
+    "cheerio": "^1.0.0-rc.12",
     "discord.js": "^14.11.0",
     "dotenv": "^16.3.1",
     "ethers": "^5.7.2",
     "express": "^4.18.2",
+    "node-cron": "^3.0.3",
     "twitter-api-v2": "^1.15.0",
     "winston": "^3.8.2",
     "winston-discord-transport": "^1.3.0"
